--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <br>
         <div class="infn-subtitle">Infn subtitle example</div>
         <br>
-        <div class="infn-text">Infn text example</div>
+        <div>Infn text example</div>
         <br><br>
         <div class="infn-section-title"><i class="fas fa-cloud"></i> Infn section Title example</div>
         <br>
